<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dwa_nav</name>
  <version>0.0.1</version>
  <description>DWA local planner node with CUDA distance map</description>

  <maintainer email="you@example.com">nvidia</maintainer>
  <license>TODO: License declaration</license>

  <!-- Python 패키지용 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드/실행 시 필요한 ROS 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <!-- ament_python용 export-->
    <build_type>ament_python</build_type>
  </export>
</package>

